--- a/ES-2Sem-2021-Grupo-8/pom.xml
+++ b/ES-2Sem-2021-Grupo-8/pom.xml
@@ -11,6 +11,17 @@
 			<artifactId>javaparser-symbol-solver-core</artifactId>
 			<version>3.20.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.0.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
